[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
assertables = "9.9.0"
ctrlc = { version = "3", features = ["termination"] }
derive_from_json_object = { version = "0.1.0", path = "derive_from_json_object" }
derive_try_from_parameters = { version = "0.1.0", path = "derive_try_from_parameters" }
urlencoding = "2.1.3"
